--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -8,7 +8,7 @@ header nav {
   align-items: center;
   position: fixed;
   z-index: 2;
-  background: rgb(4 25 45 / 55%);
+  background: #FFFFFF;
   width: 100vw;
   height: var(--nav-height);
   box-sizing: border-box;
