--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -33,7 +33,7 @@ header nav {
 }
 
 .header.block {
-  background: rgb(4 25 45 / 55%);
+  background: #FFF;
   color: white;
   position: fixed;
   width: 100%;
