--- a/styles/styles.css
+++ b/styles/styles.css
@@ -160,7 +160,7 @@ pre {
 /* buttons */
 
 a.button:any-link, button {
-  color: var(--button-text-color);
+  color: #214A9F;
   background-color: var(--button-background-color);
   text-transform: uppercase;
   font-size: 14px;
